<resources>
    <string name="app_name">Elfiltar Services</string>
    <string name="public_currency_code">EGP</string>
    <string name="public_distance_code">KM</string>
    <string name="public_yes">Yes</string>
    <string name="public_no">No</string>
    <string name="public_skip">Skip</string>
    <string name="public_confirm">Confirm</string>
    <string name="public_continue">Continue</string>
    <string name="public_submit">submit</string>
    <string name="public_resend_code">Resend Code</string>
    <string name="public_login">Login</string>
    <string name="public_logout">Logout</string>
    <string name="public_from">From</string>
    <string name="public_to">To</string>
    <string name="public_next">Next</string>
    <string name="public_notifications">Notifications</string>
    <string name="public_create">Create</string>
    <string name="public_previous">Previous</string>
    <string name="public_reject">Reject</string>
    <string name="public_accept">Accept</string>
    <string name="public_cancel">Cancel</string>
    <string name="public_done">Done</string>
    <string name="public_details">Details</string>
    <string name="public_language">Language</string>
    <string name="public_send">Send</string>
    <string name="public_register">Register</string>
    <string name="public_reset_password">Reset Password</string>
    <string name="public_forget_password">Forget Password</string>
    <string name="public_email_address">Email Address</string>
    <string name="public_address">Address</string>
    <string name="public_message">Message</string>
    <string name="public_email">Email</string>
    <string name="public_username">Username</string>
    <string name="public_name">Name</string>
    <string name="public_first_name">First name</string>
    <string name="public_last_name">Last name</string>
    <string name="public_phone_number">Phone Number</string>
    <string name="public_password">Password</string>
    <string name="public_confirm_password">Confirm Password</string>
    <string name="public_sign_in">Sign In</string>
    <string name="public_sign_up">Sign Up</string>
    <string name="public_not_have_account">Don\'t have account</string>
    <string name="public_location">Location</string>
    <string name="public_network">Network</string>
    <string name="public_message_forget_password">We will send a verification code to your registered email.</string>
    <string name="public_message_verify_identity">Please enter the verification code sent to the number</string>
    <string name="public_message_getting_location">Getting location...</string>
    <string name="public_message_request_enable_gps">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="public_message_request_enable_network">Network is not enabled. Do you want to go to settings menu?</string>
    <string name="sign_question">\?</string>
    <string name="error_message_required">Field Required</string>
    <string name="error_message_name">Name Not Valid</string>
    <string name="error_message_phone">Email Not Valid</string>
    <string name="error_message_email">Email Not Valid</string>
    <string name="error_message_date">Date Not Valid</string>
    <string name="error_message_password_length">Password Must > 6</string>
    <string name="error_message_password_matching">Password Not Match</string>
    <string name="ago_in_arabic">Since</string>
    <string name="min_ago">Minutes ago</string>
    <string name="hours_ago">Hours ago</string>
    <string name="days_ago">Days ago</string>
    <string name="just_now">just now</string>
    <string name="a_min_ago">A minute ago</string>
    <string name="yesterday">yesterday</string>
    <string name="hour_ago">An hour ago</string>
    <string name="work_hours">Work Hours</string>
    <string name="birthdate">Birthdate</string>
    <string name="id_number_resident_id">ID number / resident ID</string>
    <string name="nationality">Nationality</string>
    <string name="governorate">Governorate</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="choose_city">Choose City</string>
    <string name="choose_district">Choose District</string>
    <string name="car_brand">Car Brand</string>
    <string name="car_model">Car Model</string>
    <string name="delivery_register">Delivery Sign Up</string>
    <string name="car_manufacture_place">Car manufacture Place</string>
    <string name="car_plate_number_arabic_letters">Car plate number (Arabic letters)</string>
    <string name="car_plate_number_english_letters">Car plate number (English letters)</string>
    <string name="car_type">Car Type</string>
    <string name="identity">Identity</string>
    <string name="driving_license">Driving license</string>
    <string name="car_form">Car form</string>
    <string name="the_car_from_the_front">The car from the front</string>
    <string name="the_car_from_the_back">The car from the back</string>
    <string name="car_number">Car number</string>
    <string name="hello">hello</string>
    <string name="order_number">Order Number</string>
    <string name="account_settings">Account Settings</string>
    <string name="previous_orders">Previous Orders</string>
    <string name="contact_us">Contact Us</string>
    <string name="order">Order</string>
    <string name="orders">Orders</string>
    <string name="my_account">My Account</string>
    <string name="client">Client</string>
    <string name="rejected_orders">Rejected orders</string>
    <string name="view_by">View by</string>
    <string name="receiver_information">Receiver information</string>
    <string name="receiving_information">Receiving information</string>
    <string name="delivered">Delivered</string>
    <string name="view_map">View Map</string>
    <string name="order_information">Order information</string>
    <string name="chat">Chat</string>
    <string name="call">Call</string>
    <string name="order_details">Order details</string>
    <string name="receivers">Receivers</string>
    <string name="day">Day</string>
    <string name="users_orders">Users Orders</string>
    <string name="filters">Filters</string>
    <string name="control">Control</string>
    <string name="my_clients">My Clients</string>
    <string name="maintenance">Maintenance</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="on_the_way">On the way</string>
    <string name="finish">Finish</string>
    <string name="cost_of_maintenance">Cost of maintenance</string>
    <string name="search_by_name">Search by name</string>
    <string name="add_client">Add Client</string>
    <string name="date">Date</string>
    <string name="choose_status">Choose status</string>
    <string name="active_inactive">(active/inactive)</string>
    <string name="facebook_link">Facebook link</string>
    <string name="add">Add</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="alert_log">Alert log</string>
    <string name="edit">Edit</string>
    <string name="note">Note</string>
    <string name="packages_and_subscriptions">Packages And Subscriptions</string>
    <string name="enter_number_of_candles">Enter number of candles</string>
    <string name="sort_by">Sort by</string>
    <string name="choose_a_package_from_the_available_packages">Choose a package from the available packages</string>
    <string name="company_name">Company name</string>
    <string name="coverage_areas">Coverage areas</string>
    <string name="selected_cities">Selected Cities</string>
    <string name="company">Company</string>
    <string name="technical">Technical</string>
    <string name="start">Start</string>
    <string name="tax_record_copy">Tax record copy</string>
    <string name="commercial_registry_image">Commercial registry image</string>
    <string name="tax_registry_image">Tax registry image</string>
    <string name="identity_image">Identity image</string>
    <string name="technical_name">Technical name</string>
    <string name="water_quality">Water quality</string>
    <string name="number_of_stages">Number of stages</string>
    <string name="choose">Choose</string>
    <string name="camera">camera</string>
    <string name="gallery">Gallery</string>
    <string name="profile_image">Profile Image</string>
    <string name="subscribe">Subscribe</string>
    <string name="choose_package">Choose package</string>
    <string name="choose_changes_dates">Choose changes dates</string>
    <string name="Must_Select_Cities">Must Select Cities</string>
    <string name="can_not_select_more_than_city">Can\'t select more than 12 city</string>
    <string name="must_choose_day">Must choose day</string>
    <string name="order_canceled">Order has been canceled</string>
    <string name="order_ended">Order has been ended</string>
    <string name="candle_number">Candle number</string>
    <string name="changing_period">Changing period</string>
    <string name="no_clients_found">No clients found</string>
    <string name="no_orders_found">No orders found</string>
    <string name="no_packages_found">No packages found</string>
    <string name="search">Search</string>
    <string name="public_no_results">No results</string>
    <string name="add_water_quality">Add water quality</string>
    <string name="arabic_name">Arabic Name</string>
    <string name="english_name">English Name</string>
    <string name="add_candle">Add Candle</string>
    <string name="choose_language">Choose_language</string>
    <string name="days">days</string>
    <string name="are_you_sure_logout">Are you sure, logout?</string>
    <string name="remaining_until_the_end_of_the_subscription">subscription end in </string>
    <string name="reason_for_cancellation">Reason for cancellation</string>
    <string name="delete">Delete</string>
    <string name="order_cancel">Order Cancel</string>
    <string name="no_water_qualities_found">No water qualities found</string>
    <string name="write_cancel_reason">Write cancel reason</string>
    <string name="success">Success</string>
    <string name="no_alarm_found">No alarm found</string>
    <string name="all_clients">All Clients</string>
    <string name="delete_notifications">Delete Notifications</string>
    <string name="no_notifications_found">No notifications found</string>
    <string name="your_subscription_to_the_package_has_expired_please_re_subscribe">Your subscription to the package has expired, please re-subscribe</string>
    <string name="update_profile">Update Profile</string>
    <string name="search_by_name_or_phone">Search by name or phone</string>
    <string name="there_are_no_follow_ups">There are no follow ups</string>
    <string name="ok">Ok</string>
    <string name="blue_tech"><![CDATA[<font color = "#999999">Development by</font><font color="#656565"><b>  BLUE TECHNOLOGY</b></font>]]></string>
    <string name="reports">Reports</string>
    <string name="active_clients">Active Clients</string>
    <string name="un_active_clients">Un Active Clients</string>
    <string name="active_maintenance_clients">Active Maintenance Clients</string>
    <string name="earnings">Earnings</string>
    <string name="un_active_maintenance_clients">Un Active Maintenance Clients</string>
    <string name="current_requests">Current Requests</string>
    <string name="end_requests">End Requests</string>
    <string name="canceled_requests">Canceled Requests</string>
    <string name="otp_is_required">Otp is required</string>
    <string name="invalid_otp_code">Invalid Otp Code</string>
    <string name="update_client">Update Client</string>
    <string name="caution_if_you_do_not_choose_any_city_all_cities_within_the_selected_governorate_will_be_selected">Caution: If you do not choose any city, all cities within the selected governorate will be selected</string>
    <string name="date_of_contract">Date of contract</string>
</resources>