<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_screen"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/_16sdp">

            <ImageView
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_150sdp"
                android:src="@drawable/image_otp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_16sdp"
                android:layout_marginVertical="@dimen/_20sdp"
                android:textColor="@color/text_color_black"
                android:text="@string/your_subscription_to_the_package_has_expired_please_re_subscribe" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_choose"
                style="@style/ButtonContainedPrimary"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:text="@string/choose_package" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_logout"
                style="@style/ButtonContainedGrey"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:text="@string/public_logout" />
        </LinearLayout>
    </RelativeLayout>
</layout>