<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".business.authentication.activities.ForgetPasswordActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="@dimen/_16sdp">
                <include
                    layout="@layout/app_bar"
                    android:id="@+id/app_bar"
                    app:title="@{@string/public_forget_password}" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:text="@string/public_message_forget_password"
                    android:textColor="@color/text_color_grey"
                    android:textSize="@dimen/_13ssp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:drawableStart="@drawable/icon_phone_outline"
                    android:drawablePadding="@dimen/_8sdp"
                    android:text="@string/public_phone_number"
                    android:textColor="@color/text_color_black"
                    android:textSize="@dimen/_13ssp" />

                <com.elmoselhy.elfiltardelivery.commons.customcomponent.editText.normal.PhoneInput
                    android:id="@+id/et_phone"
                    style="@style/BoxEditTextGrey"
                    android:hint="@string/public_phone_number"
                    android:inputType="phone" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_send"
                    style="@style/ButtonContainedPrimary"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/public_send" />

            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|bottom"
                android:src="@drawable/image_forget_password" />
        </LinearLayout>
    </ScrollView>
</layout>