<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.elmoselhy.elfiltardelivery.base.BaseViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <include
            layout="@layout/loading_layout"
            app:viewModel="@{viewModel}" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_screen"
            android:orientation="vertical"
            tools:context=".business.general.activities.NotificationActivity">

            <include
                android:id="@+id/app_bar"
                layout="@layout/app_bar"
                app:title="@{@string/packages_and_subscriptions}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_a_package_from_the_available_packages" />


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:paddingHorizontal="@dimen/_10sdp"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="2"
                    tools:listitem="@layout/item_layout_package" />

                <TextView
                    android:id="@+id/tv_empty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/no_packages_found"
                    android:textColor="@color/text_color_black"
                    android:textSize="@dimen/_18ssp"
                    android:textStyle="bold"
                    android:visibility="gone" />
            </FrameLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_subscribe"
                style="@style/ButtonContainedPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subscribe" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>