<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".business.authentication.activities.ResetPasswordActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/_16sdp">

            <include
                layout="@layout/app_bar"
                android:id="@+id/app_bar"
                app:title="@{@string/public_reset_password}" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                android:src="@drawable/image_reset_password" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:drawableStart="@drawable/icon_lock"
                android:drawablePadding="@dimen/_8sdp"
                android:text="@string/public_password"
                android:textColor="@color/text_color_black"
                android:textSize="@dimen/_13ssp" />

            <com.elfiltar.elfiltartechnician.commons.customcomponent.editText.normal.PasswordInput
                android:id="@+id/et_password"
                style="@style/BoxEditTextGrey"
                android:hint="*************"
                android:inputType="textPassword" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:drawableStart="@drawable/icon_lock"
                android:drawablePadding="@dimen/_8sdp"
                android:text="@string/public_confirm_password"
                android:textColor="@color/text_color_black"
                android:textSize="@dimen/_13ssp" />

            <com.elfiltar.elfiltartechnician.commons.customcomponent.editText.normal.PasswordInput
                android:id="@+id/et_confirm_password"
                style="@style/BoxEditTextGrey"
                android:hint="*************"
                android:inputType="textPassword" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_confirm"
                style="@style/ButtonContainedPrimary"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/public_confirm" />
        </LinearLayout>

    </ScrollView>
</layout>